# arm-sandbox

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cli/: InteractiveMenu.cpp  InteractiveMenu.h  Options.h  clear-console.cpp  clear_terminal.cpp  clear_terminal.h  debugger.cpp  debugger.h  parser.cpp  parser.h
disassembly/: A64Decoder.cpp  A64Decoder.h  branches_exc_sys.cpp  branches_exc_sys.h  data_processing_imm.cpp  data_processing_imm.h  data_processing_register.cpp  data_processing_register.h  decoder_utils.cpp  decoder_utils.h  disassembly.cpp  disassembly.h  instruction_type.h  load_and_store.cpp  load_and_store.h  prettify.cpp  prettify.h  reserved.cpp  reserved.h  scalar_fp_simd.cpp  scalar_fp_simd.h
disassembly/instructions/: AddImmediate.cpp  AddImmediate.h  AddImmediateInstruction.cpp  AddImmediateInstruction.h  FormPcRelAddress.cpp  FormPcRelAddress.h  FormPcRelAddressInstruction.cpp  FormPcRelAddressInstruction.h  IndexingMode.h  LoadRegisterPair.cpp  LoadRegisterPair.h  LoadRegisterPairInstruction.cpp  LoadRegisterPairInstruction.h  LogicalOperation.h  MoveWideImmediate.cpp  MoveWideImmediate.h  MoveWideImmediateInstruction.cpp  MoveWideImmediateInstruction.h  UnconditionalBranchImmediate.cpp  UnconditionalBranchImmediate.h  UnconditionalBranchImmediateInstruction.cpp  UnconditionalBranchImmediateInstruction.h  init_helpers.h
disassembly/instructions/begsi/: CompareAndBranchImmediate.cpp  CompareAndBranchImmediate.h  ConditionalBranchImmediate.cpp  ConditionalBranchImmediate.h  Hint.cpp  Hint.h  UnconditionalBranchImmediate.cpp  UnconditionalBranchImmediate.h  UnconditionalBranchRegister.cpp  UnconditionalBranchRegister.h
disassembly/instructions/data_proc_imm/: AddImmediate.cpp  AddImmediate.h  FormPcRelAddress.cpp  FormPcRelAddress.h  LogicalImmediate.cpp  LogicalImmediate.h  MoveWideImmediate.cpp  MoveWideImmediate.h
disassembly/instructions/data_proc_register/: AddSubExtendedRegister.cpp  AddSubExtendedRegister.h  LogicalShiftedRegister.cpp  LogicalShiftedRegister.h
disassembly/instructions/data_proc_simd/: AdvancedSimdCopy.cpp  AdvancedSimdCopy.h
disassembly/instructions/loads_and_stores/: LoadRegisterPair.cpp  LoadRegisterPair.h  LoadStoreReg.cpp  LoadStoreReg.h  LoadStoreRegUnsignedImm.cpp  LoadStoreRegUnsignedImm.h  LoadStoreRegisterPair.h  indexing_helper.h
disassembly/instructions/reserved/: ReservedCall.cpp  ReservedCall.h  reserved_calls.h
emulation/: AArch64Cpu.cpp  AArch64Cpu.h  BranchType.h  CpuStack.cpp  CpuStack.h  CpuVirtualMemory.cpp  CpuVirtualMemory.h  carry_arithmetic.h  emu_types.h  emul_registers.h  nzcv.h  registers.h  reserved_calls.h  systemv_abi.h
emulation/exceptions/: EmulSegFault.cpp  EmulSegFault.h  FeatureFpNotImplemented.cpp  FeatureFpNotImplemented.h  FeatureNotImplemented.cpp  FeatureNotImplemented.h  InstructionUnallocatedError.cpp  InstructionUnallocatedError.h
emulation/executors/: AddSubImmediateExecutor.cpp  AddSubImmediateExecutor.h  BranchingExecutor.h  ExecutorBase'.h  ExecutorBase.cpp  ExecutorBase.h  ExecutorBaseTemplated.h  FormPcRelAddressExecutor.cpp  FormPcRelAddressExecutor.h  LoadStoreRegPairExecutor.cpp  LoadStoreRegPairExecutor.h  MoveWideImmediateExecutor.cpp  MoveWideImmediateExecutor.h  UnconditionalBranchImmediateExecutor.cpp  UnconditionalBranchImmediateExecutor.h  UnconditionalBranchRegisterExecutor.cpp  UnconditionalBranchRegisterExecutor.h  all_executors.h
emulation/executors/begsi/: BranchingExecutor.h  CompareAndBranchImmediateExecutor.cpp  CompareAndBranchImmediateExecutor.h  ConditionalBranchImmediateExecutor.cpp  ConditionalBranchImmediateExecutor.h  HintExecutor.cpp  HintExecutor.h  UnconditionalBranchImmediateExecutor.cpp  UnconditionalBranchImmediateExecutor.h  UnconditionalBranchRegisterExecutor.cpp  UnconditionalBranchRegisterExecutor.h
emulation/executors/data_proc_imm/: AddSubImmediateExecutor.cpp  AddSubImmediateExecutor.h  FormPcRelAddressExecutor.cpp  FormPcRelAddressExecutor.h  LogicalImmediateExecutor.cpp  LogicalImmediateExecutor.h  MoveWideImmediateExecutor.cpp  MoveWideImmediateExecutor.h
emulation/executors/data_proc_reg/: AddSubExtendedRegisterExecutor.cpp  AddSubExtendedRegisterExecutor.h  LogicalShiftedRegisterExecutor.cpp  LogicalShiftedRegisterExecutor.h
emulation/executors/data_proc_simd/: AdvancedSimdCopyExecutor.cpp  AdvancedSimdCopyExecutor.h
emulation/executors/loads_and_stores/: LoadStoreRegExecutor.cpp  LoadStoreRegExecutor.h  LoadStoreRegPairExecutor.cpp  LoadStoreRegPairExecutor.h  LoadStoreRegUnsignedImm.cpp  LoadStoreRegUnsignedImm.h
emulation/executors/reserved/: ReservedCallExecutor.cpp  ReservedCallExecutor.h
emulation/filesystem/: EmulatedFile.cpp  EmulatedFile.h  File.h  VirtualFileStruct.h  VirtualFileSystem.cpp  VirtualFileSystem.h
emulation/libraries/: DummyNamePrinter.cpp  DummyNamePrinter.h  EmulatedSymbol.h  Mapper.cpp  Mapper.h  SymbolNotImplemented.cpp  SymbolNotImplemented.h
emulation/libraries/libc/: FOpen.cpp  FOpen.h  FScanF.cpp  FScanF.h  LibCStartMain.cpp  LibCStartMain.h  Puts.cpp  Puts.h
emulation/simd/: NeonExtension.cpp  NeonExtension.h
loaders/elf/: ElfLoader.cpp  ElfLoader.h  elf-multiplatform.h  elf-windows.h
logging/: LogLevel.h  LoggerBase.cpp  LoggerBase.h  LoggerContainer.cpp  LoggerContainer.h  LoggerFactory.cpp  LoggerFactory.h  NullStream.cpp  NullStream.h  StdoutLogger.cpp  StdoutLogger.h  utils.cpp  utils.h
numbers/: two_complement.h
samples/file_read/: main.cpp
samples/hello_world/: main.cpp
utils/: bit_utils.h
