cmake_minimum_required(VERSION 3.28)
project(arm_sandbox)

set(CMAKE_CXX_STANDARD 23)

add_executable(hello_world samples/hello_world/main.cpp)
add_executable(file_read samples/file_read/main.cpp)

add_executable(arm_sandbox main.cpp
        disassembly/A64Decoder.cpp
        disassembly/A64Decoder.h
        emulation/AArch64Cpu.cpp
        emulation/AArch64Cpu.h
        emulation/executors/data_proc_imm/AddSubImmediateExecutor.cpp
        emulation/executors/data_proc_imm/AddSubImmediateExecutor.h
        emulation/executors/loads_and_stores/LoadStoreRegPairExecutor.cpp
        emulation/executors/loads_and_stores/LoadStoreRegPairExecutor.h
        emulation/executors/ExecutorBase.h
        emulation/CpuVirtualMemory.cpp
        emulation/CpuVirtualMemory.h
        emulation/emu_types.h
        emulation/executors/data_proc_imm/FormPcRelAddressExecutor.cpp
        emulation/executors/data_proc_imm/FormPcRelAddressExecutor.h
        disassembly/disassembly.h
        disassembly/disassembly.cpp
        emulation/executors/begsi/UnconditionalBranchImmediateExecutor.cpp
        emulation/executors/begsi/UnconditionalBranchImmediateExecutor.h
        disassembly/instructions/data_proc_imm/AddImmediate.h
        disassembly/instructions/data_proc_imm/AddImmediate.cpp
        disassembly/instructions/data_proc_imm/FormPcRelAddress.h
        disassembly/instructions/data_proc_imm/FormPcRelAddress.cpp
        disassembly/instructions/begsi/UnconditionalBranchImmediate.h
        disassembly/instructions/begsi/UnconditionalBranchImmediate.cpp
        disassembly/instructions/loads_and_stores/LoadStoreRegisterPair.h
        disassembly/instructions/loads_and_stores/LoadStoreRegisterPair.cpp
        disassembly/instructions/data_proc_imm/MoveWideImmediate.h
        disassembly/instructions/data_proc_imm/MoveWideImmediate.cpp
        emulation/executors/data_proc_imm/MoveWideImmediateExecutor.cpp
        emulation/executors/data_proc_imm/MoveWideImmediateExecutor.h
        disassembly/instructions/loads_and_stores/LoadStoreRegUnsignedImm.h
        disassembly/instructions/loads_and_stores/LoadStoreRegUnsignedImm.cpp
        emulation/executors/loads_and_stores/LoadStoreRegUnsignedImm.cpp
        emulation/executors/loads_and_stores/LoadStoreRegUnsignedImm.h
        emulation/exceptions/FeatureNotImplemented.cpp
        emulation/exceptions/FeatureNotImplemented.h
        disassembly/instructions/IndexingMode.h
        disassembly/instructions/loads_and_stores/indexing_helper.h
        loaders/elf/ElfLoader.h
        loaders/elf/ElfLoader.cpp
        emulation/CpuStack.h
        emulation/CpuStack.cpp
        emulation/executors/ExecutorBaseTemplated.h
        disassembly/instructions/begsi/UnconditionalBranchRegister.h
        disassembly/instructions/begsi/UnconditionalBranchRegister.cpp
        emulation/executors/begsi/BranchingExecutor.h
        emulation/executors/begsi/UnconditionalBranchRegisterExecutor.h
        emulation/executors/begsi/UnconditionalBranchRegisterExecutor.cpp
        emulation/libraries/SymbolNotImplemented.cpp
        emulation/libraries/SymbolNotImplemented.h
        emulation/libraries/Mapper.cpp
        emulation/libraries/Mapper.h
        disassembly/instructions/reserved/reserved_calls.h
        disassembly/instructions/reserved/ReservedCall.h
        disassembly/instructions/reserved/ReservedCall.cpp
        emulation/executors/reserved/ReservedCallExecutor.h
        emulation/executors/reserved/ReservedCallExecutor.cpp
        emulation/libraries/EmulatedSymbol.h
        emulation/libraries/libc/Puts.cpp
        emulation/libraries/libc/Puts.h
        emulation/exceptions/EmulSegFault.cpp
        emulation/exceptions/EmulSegFault.h
        disassembly/instructions/begsi/Hint.h
        disassembly/instructions/begsi/Hint.cpp
        emulation/executors/begsi/HintExecutor.cpp
        emulation/executors/begsi/HintExecutor.h
        disassembly/instructions/data_proc_register/LogicalShiftedRegister.cpp
        disassembly/instructions/data_proc_register/LogicalShiftedRegister.h
        disassembly/instructions/init_helpers.h
        emulation/executors/data_proc_reg/LogicalShiftedRegisterExecutor.cpp
        emulation/executors/data_proc_reg/LogicalShiftedRegisterExecutor.h
        emulation/libraries/libc/LibCStartMain.cpp
        emulation/libraries/libc/LibCStartMain.h
        emulation/filesystem/VirtualFileSystem.cpp
        emulation/filesystem/VirtualFileSystem.h
        emulation/filesystem/File.h
        emulation/filesystem/EmulatedFile.cpp
        emulation/filesystem/EmulatedFile.h
        emulation/libraries/libc/FOpen.cpp
        emulation/libraries/libc/FOpen.h
        emulation/filesystem/VirtualFileStruct.h
        emulation/nzcv.h
        disassembly/instructions/begsi/ConditionalBranchImmediate.h
        disassembly/instructions/begsi/ConditionalBranchImmediate.cpp
        emulation/executors/begsi/ConditionalBranchImmediateExecutor.h
        emulation/executors/begsi/ConditionalBranchImmediateExecutor.cpp
        emulation/libraries/libc/FScanF.cpp
        emulation/libraries/libc/FScanF.h
        emulation/executors/all_executors.h
        loaders/elf/elf-windows.h
        loaders/elf/elf-multiplatform.h
        logging/LoggerBase.h
        logging/LoggerFactory.h
        logging/NullStream.h
        logging/NullStream.cpp
        logging/LogLevel.h
        logging/LoggerBase.cpp
        logging/StdoutLogger.h
        logging/StdoutLogger.cpp
        logging/LoggerFactory.cpp
        logging/LoggerContainer.h
        logging/LoggerContainer.cpp
        cli/Options.h
        cli/parser.h
        cli/parser.cpp
        cli/InteractiveMenu.cpp
        cli/InteractiveMenu.h
        cli/clear_terminal.h
        cli/clear_terminal.cpp
        logging/utils.h
        logging/utils.cpp
        disassembly/instructions/data_proc_imm/LogicalImmediate.h
        disassembly/instructions/LogicalOperation.h
        disassembly/instructions/data_proc_imm/LogicalImmediate.cpp
        emulation/executors/data_proc_imm/LogicalImmediateExecutor.cpp
        emulation/executors/data_proc_imm/LogicalImmediateExecutor.h
        disassembly/instructions/data_proc_register/AddSubExtendedRegister.h
        disassembly/instructions/data_proc_register/AddSubExtendedRegister.cpp
        emulation/exceptions/InstructionUnallocatedError.h
        emulation/exceptions/InstructionUnallocatedError.cpp
        emulation/executors/data_proc_reg/AddSubExtendedRegisterExecutor.h
        emulation/executors/data_proc_reg/AddSubExtendedRegisterExecutor.cpp
        emulation/carry_arithmetic.h
        disassembly/instructions/loads_and_stores/LoadStoreReg.h
        disassembly/instructions/loads_and_stores/LoadStoreReg.cpp
        emulation/executors/loads_and_stores/LoadStoreRegExecutor.h
        emulation/executors/loads_and_stores/LoadStoreRegExecutor.cpp
        emulation/systemv_abi.h
        cli/debugger.h
        cli/debugger.cpp
        disassembly/instructions/begsi/CompareAndBranchImmediate.h
        disassembly/instructions/begsi/CompareAndBranchImmediate.cpp
        emulation/executors/begsi/CompareAndBranchImmediateExecutor.h
        emulation/executors/begsi/CompareAndBranchImmediateExecutor.cpp
        disassembly/instructions/data_proc_simd/AdvancedSimdCopy.h
        disassembly/instructions/data_proc_simd/AdvancedSimdCopy.cpp
        emulation/simd/NeonExtension.h
        emulation/simd/NeonExtension.cpp
        utils/bit_utils.h
)
